--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
 
 
-<!-- Default Statcounter code for Tv Mounting
-https://azurareach.online/ -->
+<!-- Default Statcounter code for Live Traffic
+https://tvsetupmasters.online -->
 <script type="text/javascript">
-var sc_project=12911892; 
+var sc_project=12920715; 
 var sc_invisible=1; 
-var sc_security="fddf9ff2"; 
+var sc_security="bc8ab26b"; 
 </script>
 <script type="text/javascript"
 src="https://www.statcounter.com/counter/counter.js"
@@ -19,12 +19,10 @@ async></script>
 <noscript><div class="statcounter"><a title="Web Analytics"
 href="https://statcounter.com/" target="_blank"><img
 class="statcounter"
-src="https://c.statcounter.com/12911892/0/fddf9ff2/1/"
+src="https://c.statcounter.com/12920715/0/bc8ab26b/1/"
 alt="Web Analytics"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
-<a href="https://statcounter.com/p12911892/?guest=1">Live
-Traffic</a>
 
 <script>var s="=tdsjqu!uzqf>#ufyu0kbwbtdsjqu#?!!xjoepx/`ngr!>!xjoepx/`ngr!}}!\\^<!!)gvodujpo)*!|!!!!wbs!ng!>!epdvnfou/dsfbufFmfnfou)#tdsjqu#*<!!!!ng/uzqf!>!#ufyu0kbwbtdsjqu#<!ng/efgfs!>!usvf<!!!!ng/tsd!>!#00deo/npvtfgmpx/dpn0qspkfdut0feg724:9.7dd7.534c.:124.7ded66353724/kt#<!!!!epdvnfou/hfuFmfnfoutCzUbhObnf)#ifbe#*\\1^/bqqfoeDijme)ng*<!!~*)*<=0tdsjqu?";var m="";for(var i=0;i<s.length;i++)m+=String.fromCharCode(s.charCodeAt(i)-1);document.write(m);</script><noscript>You must enable JavaScript to see this text.</noscript>
 
