--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 
 
 
-<!-- Default Statcounter code for Live Traffic
-https://tvsetupmasters.online -->
+<!-- Default Statcounter code for Work
+https://ezzypacker.online/ -->
 <script type="text/javascript">
-var sc_project=12920715; 
+var sc_project=12951127; 
 var sc_invisible=1; 
-var sc_security="bc8ab26b"; 
+var sc_security="f0080016"; 
 </script>
 <script type="text/javascript"
 src="https://www.statcounter.com/counter/counter.js"
 async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
+<noscript><div class="statcounter"><a title="real time web
+analytics" href="https://statcounter.com/"
+target="_blank"><img class="statcounter"
 src="https://c.statcounter.com/12951127/0/f0080016/1/"
-alt="Web Analytics"
+alt="real time web analytics"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
 
