--- a/apple/index.html
+++ b/apple/index.html
@@ -25,7 +25,7 @@
             else
                 return results[1];
         }
-        var phone = '+1-877-201-3230';
+        var phone = ('+1-877-201-3230');
     </script>
     <script type="text/javascript">
         window.onload = function () {
